Add Tests for Validator, Converter and String Provider